MAINTAINERCLEANFILES = Makefile.in
EXTRA_DIST = \
about_bot.png \
about_mid.png \
about_top.png \
arrow_down.png \
arrow_left.png \
arrow_right.png \
arrow_up.png \
ball.png \
base_bg.png \
bat_content1b.png \
bat_content1.png \
bat_content2b.png \
bat_content2.png \
bat_content3b.png \
bat_content3.png \
bat_over.png \
bat_shadow.png \
bd_bottom.png \
bd_button_close_focused.png \
bd_button_close_shadow.png \
bd_button_close_unfocused.png \
bd_button_max_focused.png \
bd_button_max_shadow.png \
bd_button_max_unfocused.png \
bd_button_min_focused.png \
bd_button_min_shadow.png \
bd_button_min_unfocused.png \
bd_resize_b.png \
bd_title_bg.png \
bd_title_over.png \
bd_top_hilight.png \
bd_top.png \
big_arrow_down.png \
big_arrow_up.png \
bluetooth.png \
bnw.png \
bt_base1.png \
bt_base2.png \
bt_basew.png \
bt_dis_base.png \
bt_dis_hilight.png \
bt_dis_shine.png \
bt_hilight.png \
bt_hilightw.png \
bt_shine.png \
bt_sm_base1.png \
bt_sm_base2.png \
bt_sm_hilight.png \
bt_sm_shine.png \
busy-1.png \
busy-2.png \
busy-3.png \
busy-4.png \
busy-5.png \
busy-6.png \
busy-7.png \
busy-8.png \
busy-9.png \
cfg.png \
ch-00.png \
ch-01.png \
ch-02.png \
ch-03.png \
ch-04.png \
ch-05.png \
ch-06.png \
ch-07.png \
ch-08.png \
ch-09.png \
ch-10.png \
ch-11.png \
ch-12.png \
ch-13.png \
ch-14.png \
ch-15.png \
ch-16.png \
ch-17.png \
ch-18.png \
ch-19.png \
ch-20.png \
ch-21.png \
ch-22.png \
ch-23.png \
ch-24.png \
ch-25.png \
ch-26.png \
ch-27.png \
ch-28.png \
ch-29.png \
ch-30.png \
ch-31.png \
ch-32.png \
ch-33.png \
ch-34.png \
ch-35.png \
ch-36.png \
ch-37.png \
ch-38.png \
ch-39.png \
ch-40.png \
ch-41.png \
ch-42.png \
ch-43.png \
ch-44.png \
ch-45.png \
ch-46.png \
ch-47.png \
ch-48.png \
ch-49.png \
ch-50.png \
ch-51.png \
ch-52.png \
ch-53.png \
ch-54.png \
ch-55.png \
ch-56.png \
ch-57.png \
ch-58.png \
ch-59.png \
check_base.png \
check_on.png \
check_sel.png \
clock_base.png \
cm-00.png \
cm-01.png \
cm-02.png \
cm-03.png \
cm-04.png \
cm-05.png \
cm-06.png \
cm-07.png \
cm-08.png \
cm-09.png \
cm-10.png \
cm-11.png \
cm-12.png \
cm-13.png \
cm-14.png \
cm-15.png \
cm-16.png \
cm-17.png \
cm-18.png \
cm-19.png \
cm-20.png \
cm-21.png \
cm-22.png \
cm-23.png \
cm-24.png \
cm-25.png \
cm-26.png \
cm-27.png \
cm-28.png \
cm-29.png \
cm-30.png \
cm-31.png \
cm-32.png \
cm-33.png \
cm-34.png \
cm-35.png \
cm-36.png \
cm-37.png \
cm-38.png \
cm-39.png \
cm-40.png \
cm-41.png \
cm-42.png \
cm-43.png \
cm-44.png \
cm-45.png \
cm-46.png \
cm-47.png \
cm-48.png \
cm-49.png \
cm-50.png \
cm-51.png \
cm-52.png \
cm-53.png \
cm-54.png \
cm-55.png \
cm-56.png \
cm-57.png \
cm-58.png \
cm-59.png \
cs-00.png \
cs-01.png \
cs-02.png \
cs-03.png \
cs-04.png \
cs-05.png \
cs-06.png \
cs-07.png \
cs-08.png \
cs-09.png \
cs-10.png \
cs-11.png \
cs-12.png \
cs-13.png \
cs-14.png \
cs-15.png \
cs-16.png \
cs-17.png \
cs-18.png \
cs-19.png \
cs-20.png \
cs-21.png \
cs-22.png \
cs-23.png \
cs-24.png \
cs-25.png \
cs-26.png \
cs-27.png \
cs-28.png \
cs-29.png \
cs-30.png \
cs-31.png \
cs-32.png \
cs-33.png \
cs-34.png \
cs-35.png \
cs-36.png \
cs-37.png \
cs-38.png \
cs-39.png \
cs-40.png \
cs-41.png \
cs-42.png \
cs-43.png \
cs-44.png \
cs-45.png \
cs-46.png \
cs-47.png \
cs-48.png \
cs-49.png \
cs-50.png \
cs-51.png \
cs-52.png \
cs-53.png \
cs-54.png \
cs-55.png \
cs-56.png \
cs-57.png \
cs-58.png \
cs-59.png \
dia_botshad.png \
dia_grad.png \
dia_topshad.png \
e17_fileman_thumb_bg.png \
e17_mini_button_shadow2.png \
exclam.png \
frame_1.png \
frame_2.png \
gadman_border.png \
gadman_bottom.png \
gadman_frame.png \
gadman_left.png \
gadman_right.png \
gadman_top.png \
grill_dark_tiny_pattern.png \
gsm_0.png \
gsm_1.png \
gsm_2.png \
gsm_3.png \
gsm_4.png \
gsm_no.png \
icon_add_fav.png \
icon_add.png \
icon_advanced.png \
icon_appearance.png \
icon_applications.png \
icon_behavior.png \
icon_border_border.png \
icon_border_close.png \
icon_border_kill.png \
icon_border_lock.png \
icon_border_maximize.png \
icon_border_minimize.png \
icon_border_more.png \
icon_border_pager.png \
icon_border_pin.png \
icon_border_properties.png \
icon_border_remember.png \
icon_border_sendto.png \
icon_border_shaded.png \
icon_border_skip.png \
icon_border_stack_bot.png \
icon_border_stack_norm.png \
icon_border_stack_top.png \
icon_check.png \
icon_colors.png \
icon_config.png \
icon_configuration.png \
icon_del.png \
icon_desklock_menu.png \
icon_desklock.png \
icon_desktops.png \
icon_directories.png \
icon_down_arrow.png \
icon_dummy.png \
icon_efm_arrange_name.png \
icon_efm_arrange.png \
icon_efm_arrange_time.png \
icon_efm_copy.png \
icon_efm_cut.png \
icon_efm_delete.png \
icon_efm_desktop.png \
icon_efm_dnd_ask.png \
icon_efm_dnd_copy.png \
icon_efm_dnd_move.png \
icon_efm_file.png \
icon_efm_folder.png \
icon_efm_hdd.png \
icon_efm_home.png \
icon_efm_new_dir.png \
icon_efm_new.png \
icon_efm_open.png \
icon_efm_paste.png \
icon_efm_properties.png \
icon_efm_refresh.png \
icon_efm_rename.png \
icon_efm_root.png \
icon_efm_select.png \
icon_efm_sort.png \
icon_efm_tmp.png \
icon_efm_view_details.png \
icon_efm_view_name.png \
icon_efm_view.png \
icon_exit.png \
icon_extensions.png \
icon_favorites.png \
icon_file_icons.png \
icon_fonts.png \
icon_globe.png \
icon_gradient.png \
icon_halt.png \
icon_hibernate.png \
icon_ibar_applications.png \
icon_icon_theme.png \
icon_intl.png \
icon_keys.png \
icon_left_arrow.png \
icon_logout.png \
icon_lost_windows.png \
icon_menu_settings.png \
icon_menus.png \
icon_mime_audio_generic.png \
icon_mime_bdf.png \
icon_mime_c.png \
icon_mime_css.png \
icon_mime_deb.png \
icon_mime_doc.png \
icon_mime_executable_generic.png \
icon_mime_font_generic.png \
icon_mime_h.png \
icon_mime_html.png \
icon_mime_image_generic.png \
icon_mime_o.png \
icon_mime_package.png \
icon_mime_patch.png \
icon_mime_pcf.png \
icon_mime_pdf.png \
icon_mime_plain.png \
icon_mime_sh.png \
icon_mime_text_generic.png \
icon_mime_ttf.png \
icon_mime_video_generic.png \
icon_mime_xcf.png \
icon_mixer.png \
icon_modules.png \
icon_mouse_clean.png \
icon_mouse_extra.png \
icon_mouse_left.png \
icon_mouse_middle.png \
icon_mouse.png \
icon_mouse_right.png \
icon_mouse_wheel.png \
icon_new.png \
icon_pager.png \
icon_performance.png \
icon_power_management.png \
icon_reboot.png \
icon_regenerate_menus.png \
icon_reset.png \
icon_resize.png \
icon_restart_applications.png \
icon_right_arrow.png \
icon_run.png \
icon_screen_around.png \
icon_screen_hflip.png \
icon_screen_left.png \
icon_screen_normal.png \
icon_screen_resolution.png \
icon_screen_right.png \
icon_screensaver.png \
icon_screen_setup.png \
icon_screen_vflip.png \
icon_shelf_bottom_desk.png \
icon_shelf_bottom_left.png \
icon_shelf_bottom.png \
icon_shelf_bottom_right.png \
icon_shelf_custom.png \
icon_shelf_dock.png \
icon_shelf_left_bottom.png \
icon_shelf_left.png \
icon_shelf_left_top.png \
icon_shelf_menu_bar.png \
icon_shelf_panel.png \
icon_shelf.png \
icon_shelf_right_bottom.png \
icon_shelf_right.png \
icon_shelf_right_top.png \
icon_shelf_top_desk.png \
icon_shelf_top_left.png \
icon_shelf_top.png \
icon_shelf_top_right.png \
icon_startup_applications.png \
icon_startup.png \
icon_suspend.png \
icon_swap.png \
icon_system.png \
icon_theme.png \
icon_transitions.png \
icon_up_arrow.png \
icon_wallpaper_center_flat.png \
icon_wallpaper_center.png \
icon_wallpaper_grad_screen.png \
icon_wallpaper.png \
icon_wallpaper_screen.png \
icon_window_focus.png \
icon_window_manipulation.png \
icon_window_remembers.png \
icon_windows.png \
icon_winlist.png \
ilist_1.png \
ilist_2.png \
ilist_header_1.png \
ilist_header_2.png \
ilist_item_shadow.png \
illume-apps.png \
illume-close.png \
illume-home.png \
init_check1.png \
init_check2.png \
inset_raised.png \
inset_sunk_dark.png \
inset_sunk.png \
k_grad.png \
k_tabhl.png \
k_tabhm.png \
k_tabhr.png \
k_tabl.png \
k_tabr.png \
k_tpsh.png \
k_wtgr.png \
logo_black_128.png \
logo_white_128.png \
menu_arrow_normal.png \
menu_arrow_sel.png \
menu_sel_bg.png \
menu_sel_fg.png \
menu_sep.png \
mixer_high_left.png \
mixer_high_right.png \
mixer_low_left.png \
mixer_low_right.png \
mixer_med_left.png \
mixer_med_right.png \
mixer.png \
move.png \
pager_base1.png \
pager_base2.png \
pager_base_pattern.png \
pager_hi1.png \
pager_hi2.png \
pager_window.png \
pager_window_shaded.png \
pager_window_unsel.png \
pointer_glint_01.png \
pointer_glint_02.png \
pointer_glint_03.png \
pointer_glint_04.png \
pointer_glint_05.png \
pointer_glint_06.png \
pointer_glint_07.png \
pointer_glint_08.png \
pointer_glint_09.png \
pointer_glint_10.png \
pointer_glint_11.png \
pointer_glint_12.png \
pointer_glow.png \
pointer_mono.png \
pointer.png \
power_glow.png \
power.png \
radio_base.png \
radio_on.png \
radio_sel.png \
resize.png \
sb_runnerh.png \
sb_runnerv.png \
shelf_alt_bg.png \
shelf_alt_over.png \
shelf_alt_shine.png \
silk.png \
slider_clicked.png \
slider.png \
tacho_bg.png \
tacho_dial_00.png \
tacho_dial_01.png \
tacho_dial_02.png \
tacho_dial_03.png \
tacho_dial_04.png \
tacho_dial_05.png \
tacho_dial_06.png \
tacho_dial_07.png \
tacho_dial_08.png \
tacho_dial_09.png \
tacho_dial_10.png \
tacho_dial_11.png \
tacho_dial_12.png \
tacho_dial_13.png \
tacho_dial_14.png \
tacho_dial_15.png \
tacho_fg.png \
temp_base.png \
temp_mid.png \
temp_over.png \
toolbar_bottom.png \
toolbar_top.png \
topsh.png \
transition_vswipe.png \
vgrad_dark.png \
vgrad_light.png \
wifi_0.png \
wifi_1.png \
wifi_2.png \
wifi_3.png \
wifi_4.png
