MAINTAINERCLEANFILES = Makefile.in
EXTRA_DIST = \
about_bot.png \
about_mid.png \
about_top.png \
arrow_down.png \
arrow_left.png \
arrow_right.png \
arrow_up.png \
base_bg.png \
bd_bottom.png \
bd_button_close_focused.png \
bd_button_close_shadow.png \
bd_button_close_unfocused.png \
bd_button_max_focused.png \
bd_button_max_shadow.png \
bd_button_max_unfocused.png \
bd_button_min_focused.png \
bd_button_min_shadow.png \
bd_button_min_unfocused.png \
bd_resize_b.png \
bd_title_bg.png \
bd_title_over.png \
bd_top_hilight.png \
bd_top.png \
big_arrow_down.png \
big_arrow_up.png \
bluetooth-powered.png \
bluetooth-inactive.png \
bluetooth-hidden.png \
bnw.png \
bt_base1.png \
bt_base2.png \
bt_basew.png \
bt_dis_base.png \
bt_dis_hilight.png \
bt_dis_shine.png \
bt_hilight.png \
bt_hilightw.png \
bt_glow.png \
bt_shine.png \
bt_sm_base1.png \
bt_sm_base2.png \
bt_sm_hilight.png \
bt_sm_shine.png \
busy-1.png \
busy-2.png \
busy-3.png \
busy-4.png \
busy-5.png \
busy-6.png \
busy-7.png \
busy-8.png \
busy-9.png \
check_base.png \
check_on.png \
check_sel.png \
ch-h1.png \
ch-h2.png \
ch-m1.png \
ch-m2.png \
ch-s1.png \
ch-s2.png \
ch-h1-2.png \
ch-h2-2.png \
ch-m1-2.png \
ch-m2-2.png \
ch-s1-2.png \
ch-s2-2.png \
ch-h1-3.png \
ch-h2-3.png \
ch-m1-3.png \
ch-m2-3.png \
ch-s1-3.png \
ch-s2-3.png \
clock_base.png \
dia_botshad.png \
dia_grad.png \
dia_topshad.png \
e17_fileman_thumb_bg.png \
e17_mini_button_shadow2.png \
efm_toolbar_bottom.png \
efm_toolbar_top.png \
everything_box.png \
outline.png \
everything_item_bg.png \
exclam.png \
favorites.png \
frame_1.png \
frame_2.png \
gadman_border.png \
gadman_bottom.png \
gadman_frame.png \
gadman_left.png \
gadman_right.png \
gadman_top.png \
grill_dark_tiny_pattern.png \
gsm_0.png \
gsm_1.png \
gsm_2.png \
gsm_3.png \
gsm_4.png \
gsm_no.png \
icon_active.png \
icon_add_fav.png \
icon_add.png \
icon_advanced.png \
icon_applications.png \
icon_applications_ibar.png \
icon_applications_new.png \
icon_applications_restart.png \
icon_applications_startup.png \
icon_autoscroll.png \
icon_behavior.png \
icon_border_border.png \
icon_border_close.png \
icon_border_kill.png \
icon_border_lock.png \
icon_border_maximize.png \
icon_border_minimize.png \
icon_border_more.png \
icon_border_pager.png \
icon_border_pin.png \
icon_border_properties.png \
icon_border_remember.png \
icon_border_sendto.png \
icon_border_shaded.png \
icon_border_skip.png \
icon_border_stack_bot.png \
icon_border_stack_norm.png \
icon_border_stack_top.png \
icon_check.png \
icon_close.png \
icon_colors.png \
icon_config.png \
icon_configuration.png \
icon_del.png \
icon_desklock_menu.png \
icon_desklock.png \
icon_desktops.png \
icon_directories.png \
icon_down_arrow.png \
icon_dummy.png \
icon_efm_arrange_name.png \
icon_efm_arrange.png \
icon_efm_arrange_time.png \
icon_efm_cd.png \
icon_efm_copy.png \
icon_efm_cut.png \
icon_efm_delete.png \
icon_efm_desktop.png \
icon_efm_dnd_ask.png \
icon_efm_dnd_copy.png \
icon_efm_dnd_move.png \
icon_efm_eject.png \
icon_efm_file.png \
icon_efm_flash.png \
icon_efm_folder.png \
icon_efm_hdd.png \
icon_efm_home.png \
icon_efm_new_dir.png \
icon_efm_new.png \
icon_efm_open.png \
icon_efm_paste.png \
icon_efm_properties.png \
icon_efm_refresh.png \
icon_efm_rename.png \
icon_efm_root.png \
icon_efm_select.png \
icon_efm_sort.png \
icon_efm_tmp.png \
icon_efm_view_details.png \
icon_efm_view_name.png \
icon_efm_view.png \
icon_efm_vol_unmounted.png \
icon_efm_vol_mounted.png \
icon_efm_usbmedia.png \
icon_evry_clipboard.png \
icon_engine.png \
icon_extensions.png \
icon_favorites.png \
icon_file_icons.png \
icon_fonts.png \
icon_globe.png \
icon_gradient.png \
icon_halt.png \
icon_hibernate.png \
icon_icon_theme.png \
icon_imc.png \
icon_interaction.png \
icon_intl.png \
icon_keys.png \
icon_left_arrow.png \
icon_logout.png \
icon_lost_windows.png \
icon_menu_settings.png \
icon_menus.png \
icon_mime_audio_generic.png \
icon_mime_bdf.png \
icon_mime_c.png \
icon_mime_css.png \
icon_mime_deb.png \
icon_mime_doc.png \
icon_mime_executable_generic.png \
icon_mime_font_generic.png \
icon_mime_h.png \
icon_mime_html.png \
icon_mime_image_generic.png \
icon_mime_o.png \
icon_mime_package.png \
icon_mime_patch.png \
icon_mime_pcf.png \
icon_mime_pdf.png \
icon_mime_plain.png \
icon_mime_sh.png \
icon_mime_text_generic.png \
icon_mime_ttf.png \
icon_mime_video_generic.png \
icon_mime_xcf.png \
icon_mixer.png \
icon_modules.png \
icon_mouse_clean.png \
icon_mouse_extra.png \
icon_mouse_left.png \
icon_mouse_middle.png \
icon_mouse.png \
icon_mouse_right.png \
icon_mouse_wheel.png \
icon_new.png \
icon_pager.png \
icon_performance.png \
icon_power_management.png \
icon_profiles.png \
icon_reboot.png \
icon_reset.png \
icon_resize.png \
icon_right_arrow.png \
icon_run.png \
icon_scale.png \
icon_screen_around.png \
icon_screen_hflip.png \
icon_screen_left.png \
icon_screen_normal.png \
icon_screen_resolution.png \
icon_screen_right.png \
icon_screensaver.png \
icon_screen_setup.png \
icon_screen_vflip.png \
icon_screenshot.png \
icon_shelf_bottom_desk.png \
icon_shelf_bottom_left.png \
icon_shelf_bottom.png \
icon_shelf_bottom_right.png \
icon_shelf_custom.png \
icon_shelf_dock.png \
icon_shelf_left_bottom.png \
icon_shelf_left.png \
icon_shelf_left_top.png \
icon_shelf_menu_bar.png \
icon_shelf_panel.png \
icon_shelf.png \
icon_shelf_right_bottom.png \
icon_shelf_right.png \
icon_shelf_right_top.png \
icon_shelf_top_desk.png \
icon_shelf_top_left.png \
icon_shelf_top.png \
icon_shelf_top_right.png \
icon_startup.png \
icon_suspend.png \
icon_swap.png \
icon_system.png \
icon_toolbar.png \
icon_theme.png \
icon_transitions.png \
icon_up_arrow.png \
icon_wallpaper_center_flat.png \
icon_wallpaper_center.png \
icon_wallpaper_grad_screen.png \
icon_wallpaper.png \
icon_wallpaper_screen.png \
icon_warning.png \
icon_window_focus.png \
icon_window_geometry.png \
icon_window_manipulation.png \
icon_window_remembers.png \
icon_windows.png \
icon_winlist.png \
icon_win_move.png \
icon_win_resize.png \
icon_illume.png \
ilist_1.png \
ilist_2.png \
ilist_header_1.png \
ilist_header_2.png \
ilist_item_shadow.png \
illume-apps.png \
illume-close.png \
illume-home.png \
illume-kbd.png \
illume-kbd-on.png \
illume-mode-dual-left.png \
illume-mode-dual-top.png \
illume-mode-single.png \
inset_raised.png \
inset_sunk_dark.png \
inset_sunk.png \
k_grad.png \
k_tabhl.png \
k_tabhm.png \
k_tabhr.png \
k_tabl.png \
k_tabr.png \
k_tpsh.png \
k_wtgr.png \
logo_black_128.png \
logo_white_128.png \
menu_arrow_normal.png \
menu_arrow_sel.png \
menu_sel_bg.png \
menu_sel_fg.png \
menu_sep.png \
mixer_high_left.png \
mixer_high_right.png \
mixer_low_left.png \
mixer_low_right.png \
mixer_med_left.png \
mixer_med_right.png \
mixer.png \
pager_base1.png \
pager_base2.png \
pager_base_pattern.png \
pager_hi1.png \
pager_hi2.png \
pager_window.png \
pager_window_shaded.png \
pager_window_unsel.png \
pointer_glint_01.png \
pointer_glint_02.png \
pointer_glint_03.png \
pointer_glint_04.png \
pointer_glint_05.png \
pointer_glint_06.png \
pointer_glint_07.png \
pointer_glint_08.png \
pointer_glint_09.png \
pointer_glint_10.png \
pointer_glint_11.png \
pointer_glint_12.png \
pointer_glow.png \
pointer_mono.png \
pointer.png \
radio_base.png \
radio_on.png \
radio_sel.png \
refresh.png \
sb_runnerh.png \
sb_runnerv.png \
shelf_alt_bg.png \
shelf_alt_over.png \
shelf_alt_shine.png \
silk.png \
slider_clicked.png \
slider.png \
t0.png \
t0-sh.png \
t1.png \
t1-sh.png \
t2.png \
tacho_bg.png \
tacho_fg.png \
temp_base.png \
temp_mid.png \
temp_over.png \
toolbar_sel.png \
topsh.png \
transition_vswipe.png \
vgrad_dark.png \
vgrad_light.png \
wp-tb1.png \
wp-bot1.png \
wp-tb2.png \
wp-bot2.png \
wp-tb3.png \
wp-tbs.png \
systray_rounded_corners.png \
theme-label.png \
glow.png \
icon_efm_file_del.png \
exq-bglight.png \
exq-logo.png \
exq-dot.png \
exq-dot-glow.png \
exq-vgrad.png \
connman-disconnect.png \
connman-disconnect-offline.png \
connman-ethernet.png \
connman-wifi.png \
connman-wifi-good.png \
connman-wifi-medium.png \
connman-wifi-bad.png \
connman-connecting-1.png \
connman-connecting-2.png \
connman-connecting-3.png \
connman-connecting-4.png \
comp-sh1.png \
shelf_alt_vert_bg.png \
icon_look.png \
icon_gadget.png \
flip_0b.png \
flip_0t.png \
flip_1b.png \
flip_1t.png \
flip_2b.png \
flip_2t.png \
flip_3b.png \
flip_3t.png \
flip_4b.png \
flip_4t.png \
flip_5b.png \
flip_5t.png \
flip_6b.png \
flip_6t.png \
flip_7b.png \
flip_7t.png \
flip_8b.png \
flip_8t.png \
flip_9b.png \
flip_9t.png \
flip_amb.png \
flip_amt.png \
flip_base.png \
flip_base_shad.png \
flip_b.png \
flip_pmb.png \
flip_pmt.png \
flip_shad.png \
flip_t.png \
flip_colon.png \
bulb-0.png \
bulb-1.png \
bulb-2.png \
batt_base.png \
batt_level.png \
batt_over.png \
batt_power.png \
bg_shadow.png \
bg_over.png \
bg_base.png
